--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div style="text-align:right">
         <h2>Página do YURI</h2></div><!-- colocar a direita-->
         <div style="text-align:left">
-        <h3>Primeiro trabalho html</h3></div><!--colocar a esquerda-->
+        <h3><font face color="#9932CC
+            ">Primeiro trabalho html</h3></div></font><!--colocar a esquerda-->
         
 
         Olá, mundo.<br><!--testando paragrafo e pulo de linha <br>-->
