--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Olá, mundo.<br><!--testando paragrafo e pulo de linha <br>-->
         Minha primeira página na internet  
         <p align="center">
-            <img src="imagens/IMG_20230704_223031_562.jpg" border="4 px solid #FFFF00" width="20%" alt="YURI">
+            <img src="./imagens/IMG_20230704_223031_562.jpg" border="4 px solid #FFFF00" width="20%" alt="YURI">
         
         <hr>
         <div style=" text-align:center">Sobre mim Versos
