--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             ">Primeiro trabalho html</h3></div></font><!--colocar a esquerda-->
         
 
-        Olá, mundo.<br><!--testando paragrafo e pulo de linha <br>-->
-        Minha primeira página na internet  
+        <font face color="#BA55D3"> Olá, mundo.</font><br><!--testando paragrafo e pulo de linha <br>-->
+        <font face color="#DA70D6"> Minha primeira página na internet</font>
         <p align="center">
             <img src="./imagens/IMG_20230704_223031_562.jpg" border="4 px solid #FFFF00" width="20%" alt="YURI">
         
@@ -42,7 +42,7 @@
             <p><b> bold - negrito</b><br>
             <u> underline - sublinhado</u><br>
             <i> italic - italico</i><br>
-            <b><i><u>testando todas as formatações juntas</u></i></b>
+            <b><i><u>testando todas as formatações juntas</u></i></b></p>
             <hr>
             <font face color="red">Mudando a cor da fonte</font><br>
                         <font face="Comic Sans Ms"> Mudando a Fonte</font><br>
